--- a/package.json
+++ b/package.json
@@ -4,18 +4,47 @@
   "main": "node_modules/expo/AppEntry.js",
   "scripts": {
     "start": "expo start",
+    "test": "jest",
     "android": "expo start --android",
     "ios": "expo start --ios",
     "web": "expo start --web"
   },
   "dependencies": {
+    "@babel/runtime": "^7.20.6",
+    "@react-native-community/datetimepicker": "^6.5.4",
+    "@react-navigation/native": "^6.0.13",
+    "@react-navigation/stack": "^6.3.3",
+    "@types/react-test-renderer": "^18.0.0",
+    "axios": "^1.1.3",
+    "babel-jest": "^29.3.1",
     "expo": "~46.0.16",
     "expo-status-bar": "~1.4.0",
+    "jest": "^26.6.3",
+    "pod-install": "^0.1.38",
     "react": "18.0.0",
-    "react-native": "0.69.6"
+    "react-hook-form": "^7.39.1",
+    "react-native": "0.69.6",
+    "react-native-axios": "^0.17.1",
+    "react-native-date-picker": "^4.2.6",
+    "react-native-datepicker": "^1.7.2",
+    "react-native-gesture-handler": "^2.8.0",
+    "react-native-safe-area-context": "4.3.1",
+    "react-native-screens": "~3.15.0",
+    "react-native-table-component": "^1.2.2",
+    "react-test-renderer": "18.2.0",
+    "victory-native": "^36.6.8"
   },
   "devDependencies": {
-    "@babel/core": "^7.12.9"
+    "@babel/core": "^7.12.9",
+    "@testing-library/react-native": "11.5.0",
+    "jest-expo": "^47.0.1",
+    "react-test-renderer":"18.2.0"
+  },
+  "jest": {
+    "preset": "jest-expo",
+    "transformIgnorePatterns": [
+      "node_modules/(?!((jest-)?react-native|@react-native(-community)?)|expo(nent)?|@expo(nent)?/.*|@expo-google-fonts/.*|react-navigation|@react-navigation/.*|@unimodules/.*|unimodules|sentry-expo|native-base|react-native-svg.*|axios)"
+    ]
   },
   "private": true
 }
